@@ -1,1 +1,1 @@
-0.30.1
+0.30.2
