@@ -1,4 +1,4 @@
 # Sphinx build info version 1
 # This file hashes the configuration used when building these files. When it is not found, a full rebuild will be done.
-config: b9cad87be8e4b0419bcfe84c49b79406
+config: 08669127d8df6d22fcd256e88126367f
 tags: 645f666f9bcd5a90fca523b33c5a78b7
