@@ -1,3 +1,9 @@
+#---------------------------------- 0.30.2 -----------------------------------
+[fixed] removed izip, fixed some utility functions, added no arguments test to
+    test / verify basic issue. Thanks to github user https://github.com/makov44
+    for the original bug report and PR.
+[changed] can now set the default queue name for the whole rpqueue as an
+    attribute called `rpqueue.DEFAULT_QUEUE` - kind of undocumented for now
 #---------------------------------- 0.30.1 -----------------------------------
 [fixed] docs website and link
 #---------------------------------- 0.30.0 -----------------------------------
